--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,12 @@
 	    <artifactId>commons-configuration</artifactId>
 	    <version>1.8</version>
 	</dependency>
-
+	
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.6</version>
+	</dependency>
 	
   </dependencies>
 </project>
